# Copager

./: Cargo.toml  README.md
crates/algorithm/: Cargo.toml
crates/algorithm/src/: lib.rs
crates/algorithm_lr1/: Cargo.toml
crates/algorithm_lr1/src/: builder.rs  driver.rs  error.rs  lib.rs
crates/cfg/: Cargo.toml
crates/cfg/src/: lib.rs  rule.rs  token.rs
crates/cfg_derive/: Cargo.toml
crates/cfg_derive/src/: impl.rs  lib.rs
crates/cfl/: Cargo.toml
crates/cfl/src/: lib.rs  rule.rs  token.rs
crates/cfl_derive/: Cargo.toml
crates/cfl_derive/src/: impl.rs  lib.rs
crates/cfl_derive/src/impl/: cfl.rs  rule.rs  token.rs
crates/cfl_derive/tests/: cfl.rs  rules.rs  tokens.rs  tokens_with_ignored.rs  tokens_with_trivia.rs
crates/core/: Cargo.toml
crates/core/src/: cfg.rs  error.rs  generator.rs  lex.rs  lib.rs  parse.rs  processor.rs
crates/core/src/cfg/: syntax.rs  token.rs
crates/core/tests/: prebuild.rs  simple.rs  simple_multiple.rs
crates/core_derive/: Cargo.toml
crates/core_derive/src/: impl.rs  lib.rs
crates/core_macros/: Cargo.toml
crates/core_macros/src/: impl.rs  lib.rs
crates/ir/: Cargo.toml
crates/ir/src/: lib.rs
crates/ir_derive/: Cargo.toml
crates/ir_derive/src/: lib.rs  utils.rs
crates/ir_derive/src/impl/: builder.rs  ir.rs
crates/ir_derive/tests/: builder.rs
crates/ir_json/: Cargo.toml
crates/ir_json/src/: lib.rs  lite.rs  normal.rs
crates/ir_json/tests/: simple.rs
crates/ir_sexp/: Cargo.toml
crates/ir_sexp/src/: lib.rs  owned.rs  ref.rs
crates/ir_sexp/tests/: simple.rs
crates/ir_tree/: Cargo.toml
crates/ir_tree/src/: lib.rs  owned.rs  ref.rs
crates/ir_tree/src/owned/: data.rs  walker.rs
crates/ir_tree/src/ref/: data.rs  walker.rs
crates/ir_tree/tests/: simple.rs
crates/ir_void/: Cargo.toml
crates/ir_void/src/: lib.rs
crates/ir_xml/: Cargo.toml
crates/ir_xml/src/: lib.rs
crates/ir_xml/tests/: simple.rs
crates/lang/: Cargo.toml
crates/lang/src/: lib.rs  rule.rs  token.rs
crates/lang_derive/: Cargo.toml
crates/lang_derive/src/: impl.rs  lib.rs
crates/lang_derive/src/impl/: lang.rs
crates/lang_derive/tests/: cfl.rs  rules.rs  tokens.rs  tokens_with_trivia.rs
crates/lex/: Cargo.toml
crates/lex/src/: lib.rs
crates/lex_derive/: Cargo.toml
crates/lex_derive/src/: lib.rs
crates/lex_derive/src/impl/: lex.rs
crates/lex_derive/tests/: simple.rs  with_ignored.rs
crates/lex_regex/: Cargo.toml
crates/lex_regex/src/: lib.rs
crates/lex_regex/tests/: simple.rs  with_pp_trivia.rs  with_trivia.rs
crates/macros/: Cargo.toml
crates/parse/: Cargo.toml
crates/parse/src/: lib.rs
crates/parse_common/: Cargo.toml
crates/parse_derive/: Cargo.toml
crates/parse_derive/src/: lib.rs
crates/parse_derive/tests/: simple.rs
crates/parse_lr1/: Cargo.toml
crates/parse_lr1/src/: builder.rs  error.rs  lib.rs
crates/parse_lr1/tests/: simple.rs
crates/parse_lr_common/: Cargo.toml
crates/parse_lr_common/src/: automaton.rs  driver.rs  error.rs  lib.rs  lr0.rs  rule.rs  table.rs
crates/parse_lr_common/src/automaton/: lalr1.rs  lr1.rs
crates/parse_lr_common/src/automaton/lalr1/: dfa.rs  item.rs
crates/parse_lr_common/src/automaton/lr0/: dfa.rs  item.rs
crates/parse_lr_common/src/automaton/lr1/: dfa.rs  item.rs
crates/parse_lr_common/src/lr0/: automaton.rs  dfa.rs  item.rs
crates/parse_lr_common/src/lr1/: item.rs
crates/parse_lr_common/src/rule/: director.rs  first.rs  follow.rs
crates/parse_lr_lalr1/: Cargo.toml
crates/parse_lr_lalr1/src/: lib.rs
crates/parse_lr_lalr1/tests/: simple.rs
crates/parse_lr_lr0/: Cargo.toml
crates/parse_lr_lr0/src/: lib.rs
crates/parse_lr_lr0/tests/: simple.rs
crates/parse_lr_lr1/: Cargo.toml
crates/parse_lr_lr1/src/: builder.rs  lib.rs
crates/parse_lr_lr1/tests/: simple.rs
crates/parse_lr_slr1/: Cargo.toml
crates/parse_lr_slr1/src/: lib.rs
crates/parse_lr_slr1/tests/: simple.rs
crates/utils/: Cargo.toml
crates/utils/src/: cache.rs  error.rs
docs/: HowToUse.md  Makefile  config.toml
docs/content/: _index.md
docs/layouts/partials/: logo.html
examples/: expr.rs
examples/build_oneshot/: Cargo.toml
examples/build_oneshot/src/: main.rs
examples/build_prebuild/: Cargo.toml  build.rs
examples/build_prebuild/grammar/src/: lib.rs
examples/build_prebuild/language/: Cargo.toml
examples/build_prebuild/language/src/: lib.rs
examples/build_prebuild/src/: main.rs
examples/lang_arithmetic/: Cargo.toml
examples/lang_arithmetic/src/: lib.rs  main.rs
examples/lang_easyarith/: Cargo.toml
examples/lang_easyarith/src/: ast.rs  eval.rs  lib.rs  main.rs  syntax.rs
examples/lang_json/: Cargo.toml
examples/lang_json/src/: lib.rs  main.rs  syntax.rs
examples/lang_pl0/: Cargo.toml
examples/lang_pl0/src/: lib.rs  main.rs  rule.rs  syntax.rs  token.rs
examples/lang_xml/: Cargo.toml
examples/lang_xml/src/: lib.rs  main.rs  syntax.rs
examples/oneshot/: Cargo.toml
examples/oneshot/src/: main.rs
examples/prebuild/: Cargo.toml  build.rs
examples/prebuild/grammar/: Cargo.toml
examples/prebuild/src/: main.rs
src/: lib.rs
tests/: derive.rs  serde.rs
tests/arithmetic/: test.rs
tests/arithmetic/fail/: testcase_05.txt  testcase_07.txt  testcase_2.txt  testcase_6.txt
tests/arithmetic/success/: testcase_06.txt  testcase_08.txt  testcase_10.txt  testcase_9.txt
tests/easyarith/: test.rs
tests/easyarith/fail/: testcase_02.txt  testcase_03.txt  testcase_04.txt  testcase_05.txt  testcase_07.txt
tests/easyarith/success/: testcase_01.txt  testcase_02.txt  testcase_03.txt
tests/json/: test.rs
tests/json/fail/: testcase_03.txt  testcase_04.txt
tests/json/success/: testcase_04.txt  testcase_07.txt  testcase_08.txt  testcase_09.txt  testcase_13.txt
tests/pl0/: test.rs
tests/pl0/fail/: testcase_01.txt  testcase_03.txt  testcase_05.txt  testcase_2.txt  testcase_4.txt  testcase_6.txt
tests/pl0/success/: testcase_01.txt  testcase_02.txt  testcase_04.txt  testcase_05.txt  testcase_07.txt  testcase_09.txt  testcase_1.txt  testcase_10.txt  testcase_11.txt  (+4 more)
tests/xml/: test.rs  utils.rs
(+30 files in other folders)
