[package]
name = "copager"
version = "0.1.1"
edition = "2021"

[dependencies]
copager_core = { path = "./crates/core" }
copager_cfg = { path = "./crates/cfg" }
copager_lex = { path = "./crates/lex", optional = true }
copager_lex_regex = { path = "./crates/lex_regex", optional = true }
copager_parse = { path = "./crates/parse", optional = true }
copager_parse_lr1 = { path = "./crates/parse_lr1", optional = true }
copager_ir = { path = "./crates/ir" }
copager_ir_sexp = { path = "./crates/ir_sexp", optional = true }

[dev-dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.117"
copager = { path = ".", features = ["derive", "all"] }

[features]
# common
default = ["copager_lex", "copager_parse"]
derive = ["copager_lex/derive", "copager_parse/derive"]
all = ["copager_lex_regex", "copager_parse_lr1", "copager_ir_sexp"]

# lex
regexlex = ["copager_lex_regex"]

# parse
lr1 = ["copager_parse_lr1"]

# ir
sexp = ["copager_ir_sexp"]

[workspace]
resolver = "2"
members = [
    "./crates/core",
    "./crates/cfg",
    "./crates/lex",
    "./crates/lex_derive",
    "./crates/lex_regex",
    "./crates/parse",
    "./crates/parse_derive",
    "./crates/parse_lr1",
    "./crates/ir",
    "./crates/ir_sexp",
    "./crates/utils",
]
exclude = []

[workspace.dependencies]
anyhow = "1.0.82"
thiserror = "1.0.58"
serde = { version = "1.0.197", features = ["derive"] }
regex = "1.10.4"
regex-macro = "0.2.0"
