[package]
name = "copager_cfl"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
copager_cfl_derive = { path = "../cfl_derive", optional = true }

[features]
default = []
derive = ["dep:copager_cfl_derive"]
