[package]
name = "copager_cfl_derive"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version ="2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
copager_cfl = { path = "../cfl", features = ["derive"] }

[lib]
proc-macro = true
