[package]
name = "copager_cfl_derive"
edition = "2021"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version ="2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
copager_cfl = { path = "../cfl", features = ["derive"] }

[lib]
proc-macro = true
