[package]
name = "copager_core"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_cbor = "0.11.2"
copager_cfg = { path = "../cfg" }
copager_lex = { path = "../lex" }
copager_parse = { path = "../parse" }
copager_utils = { path = "../utils" }

[dev-dependencies]
copager_core = { path = "." }
copager_lex = { path = "../lex", features = ["derive"]}
copager_lex_regex = { path = "../lex_regex" }
copager_parse = { path = "../parse", features = ["derive"] }
copager_parse_lr1 = { path = "../parse_lr1" }
