[package]
name = "copager_core"
edition = "2021"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_cbor = "0.11.2"
copager_cfl = { path = "../cfl" }
copager_lex = { path = "../lex" }
copager_parse = { path = "../parse" }
copager_ir = {  path = "../ir" }
copager_utils = { path = "../utils" }

[dev-dependencies]
copager_core = { path = "." }
copager_cfl = { path = "../cfl", features = ["derive"] }
copager_lex = { path = "../lex" }
copager_lex_regex = { path = "../lex_regex" }
copager_parse = { path = "../parse" }
copager_parse_lr_lr1 = { path = "../parse_lr_lr1" }
copager_ir_void = { path = "../ir_void" }
