[package]
name = "copager_ir"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
copager_cfl = { path = "../cfl" }
copager_lex = { path = "../lex" }
copager_parse = { path = "../parse" }
copager_ir_derive = { path = "../ir_derive", optional = true }

[features]
default = []
derive = ["dep:copager_ir_derive"]
