[package]
name = "copager_ir_sexp"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
copager_cfg = { path = "../cfg" }
copager_lex = { path = "../lex" }
copager_parse = { path = "../parse" }
copager_ir = { path = "../ir" }

[dev-dependencies]
copager_lex = { path = "../lex", features = ["derive"] }
copager_lex_regex = { path = "../lex_regex" }
copager_parse = { path = "../parse", features = ["derive"] }
copager_parse_lr1 = { path = "../parse_lr1" }
copager_ir_sexp = { path = "." }
