[package]
name = "copager_lang"
edition = "2021"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
copager_lang_derive = { path = "../lang_derive", optional = true }

[features]
default = []
derive = ["dep:copager_lang_derive"]
