[package]
name = "copager_lex"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
copager_cfg = { path = "../cfg" }
copager_utils = { path = "../utils" }
copager_lex_derive = { path = "../lex_derive", optional = true }

[features]
default = []
derive = ["copager_lex_derive"]
