[package]
name = "copager_parse_lr1"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
itertools = "0.12.1"
copager_core = { path = "../core" }
copager_cfg = { path = "../cfg" }
copager_lex = { path = "../lex" }
copager_parse = { path = "../parse" }
copager_utils = { path = "../utils" }
