cargo-features = ["edition2024"]

[package]
name = "copager_parse_lr1"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
itertools = "0.12.1"
copager_core = { path = "../core" }
copager_cfg = { path = "../cfg" }
copager_lex = { path = "../lex" }
copager_parse = { path = "../parse" }
copager_utils = { path = "../utils" }

[dev-dependencies]
copager_lex = { path = "../lex", features = ["derive"] }
copager_lex_regex = { path = "../lex_regex"  }
copager_parse = { path = "../parse", features = ["derive"] }
copager_parse_lr1 = { path = "../parse_lr1" }
