cargo-features = ["edition2024"]

[package]
name = "copager_parse_lr_common"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
copager_core = { path = "../core" }
copager_cfg = { path = "../cfg" }
copager_parse = { path = "../parse" }
copager_parse_common = { path = "../parse_common" }
