[package]
name = "copager_parse_lr_common"
edition = "2024"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
copager_lang = { path = "../lang" }
copager_parse = { path = "../parse" }
copager_parse_common = { path = "../parse_common" }
copager_utils = { path = "../utils" }
