cargo-features = ["edition2024"]

[package]
name = "copager_parse_lr_lr0"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
copager_cfg = { path = "../cfg" }
copager_lex = { path = "../lex" }
copager_parse = { path = "../parse" }
copager_parse_lr_common = { path = "../parse_lr_common" }
