cargo-features = ["edition2024"]

[package]
name = "copager_parse_lr_lr0"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
copager_cfl = { path = "../cfl" }
copager_lex = { path = "../lex" }
copager_parse = { path = "../parse" }
copager_parse_lr_common = { path = "../parse_lr_common" }
copager_utils = { path = "../utils" }

[dev-dependencies]
copager_core = { path = "../core" }
copager_cfl = { path = "../cfl", features = ["derive"] }
copager_lex_regex = { path = "../lex_regex" }
copager_parse = { path = "../parse" }
copager_ir_void = { path = "../ir_void" }
