[package]
name = "example_prebuild"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = "1.0.128"
copager = { path = "../..", features = ["sexp"] }
grammar = { package = "example_prebuild_grammar", path = "./grammar" }

[build-dependencies]
serde = { workspace = true }
serde_json = "1.0.128"
copager = { path = "../.." }
grammar = { package = "example_prebuild_grammar", path = "./grammar" }
